--- a/templates/mobile/base.html
+++ b/templates/mobile/base.html
@@ -116,6 +116,7 @@
 </html>
 <script type="text/javascript" src="{% static 'mobile/js/jquery-1.7.1.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'mobile/js/common.js' %}"></script>
+<script type="text/javascript" src="{% static 'mobile/js/swipe-min.js' %}"></script>
 {% block myjavsascirpt %}
 
 {% endblock %}
